--- a/index.html
+++ b/index.html
@@ -12,6 +12,56 @@
          <div class="home">
 
          </div>
+         <!-- charles' code1 -->
+         <div class="real">
+            <div class="about">
+                <p>___ About us</p> 
+                <h1>REAL ESTATE STUDIO</h1>
+            </div>
+            <div class="lorem">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro maxime, ullam ex numquam asperiores
+                veniam <br>nihil quos omnis dolorum optio voluptatum nisi voluptatibus, nemo quo? Cumque nulla sed
+                    <div class="button">
+                        <button type="button">READ MORE</button>
+                    </div>
+                    <div class="experience">
+                        <div class="work">
+                            <p>12</p>
+                            <p>years of work</p>
+                        </div>
+                        <div class="rental">
+                            <p>99+</p>
+                            <p>rental houses</p>
+                        </div>
+                        <div class="deals">
+                            <p>72</p>
+                            <p>deals per year</p>
+                        </div>
+                    </div>
+            </div>
+        </div>
+        <!-- mac-d code -->
+         <!-- charles' code2 -->
+         <div class="contact">
+            <div class="questions">
+                <P>__ CONTACT</P>
+                <h1>ANY OTHER QUESTIONS?</h1>
+                <div class="lorem">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae cupiditate dicta, <br>
+                    libero vero recusandae placeat vel obcaecati at deserunt ab totam officia modi <br>sit sunt,
+                    iure quisquam. Eos, ut sapiente?
+                </div>
+                </div>
+            <div class="form">
+                <h2>Get a <a href="#free">free</a> expert consultation</h2>
+                    <div class="input">
+                        <input type="text" placeholder="NAME">
+                        <input type="text" placeholder="PHONE NUMBER">
+                    </div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    <button type="submit">SEND</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
